# obsidian-note-manager

./: .env  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTEXT-S11.md  CONTEXT-S12.md  CONTEXT-S13.md  CONTEXT-S14.md  CONTEXT-S15.md  Dockerfile  FAILURE-S01.md  FAILURE-S02.md  FAILURE-S03.md  FAILURE-S05.md  FAILURE-S06.md  FAILURE-S07.md  FAILURE-S08.md  FAILURE-S09.md  FAILURE-S10.md  FAILURE-S11.md  FAILURE-S12.md  FAILURE-S13.md  FAILURE-S14.md  FAILURE-S15.md  FAILURE-S99.md  HALT.md  LEARNINGS.md  LOOP.md  PLAN-S07.md  PLAN-S08.md  PLAN-S09.md  PLAN-S98.md  PLAN.md  RALPH-OUTCOME-S11.md  RALPH-OUTCOME-S12.md  RALPH-OUTCOME-S13.md  RALPH-OUTCOME-S14.md  RALPH-OUTCOME-S15.md  README.md  (+10 more)
.chainlit/: config.toml
.github/workflows/: build-push.yml  build.yml  ci.yml  ingest.yml  maintenance.yml  test-runner.yml  watchman.yml
apps/: __init__.py
apps/copilot-ui/: __init__.py  pyproject.toml
apps/copilot_ui/: Dockerfile  app.py  pyproject.toml  requirements.txt  temporal_client.py
apps/github-runner/: pyproject.toml
apps/github_runner/: Dockerfile  __init__.py  pyproject.toml  requirements.txt  trigger.py
apps/vault-worker/: __init__.py  pyproject.toml
apps/vault-worker/activities/: __init__.py  git_ops.py
apps/vault-worker/workflows/: read_vault.py
apps/vault_worker/: __init__.py  worker.py
bubbles/: OBSE-P5-S01-monorepo-scaffolding.md  OBSE-P5-S02-dummy-vault-fake-llm.md  OBSE-P5-S03-temporal-test-environment.md  OBSE-P5-S04-vault-io-activities.md  OBSE-P5-S05-git-operations-activities.md  OBSE-P5-S06-llm-generation-activities.md  OBSE-P5-S07-read-vault-workflow.md  OBSE-P5-S08-write-vault-workflow.md  OBSE-P5-S09-vault-manager-workflow.md  OBSE-P5-S10-night-watchman-workflow.md  OBSE-P5-S11-filer-ingestion-workflow.md  OBSE-P5-S12-copilot-session-workflow.md  OBSE-P5-S13-github-runner-refactor.md  OBSE-P5-S14-copilot-ui-refactor.md  OBSE-P5-S15-ci-cd-pipeline.md  OBSE-P5-S16-production-docker-compose.md  OBSE-P5-S17-monorepo-path-hygiene.md  OBSE-P5-S98-plan-phase-test.md  S99-monitor-fire-test.md
docs/: README.md  api-reference.md  architecture.md  code-registry.md  components.md  ingest-deployment.md  setup.md  troubleshooting-git-not-updated.md  troubleshooting-pi-offline.md  troubleshooting-runner-update.md  troubleshooting.md  workflows.md
example/: README.md
example/workflows/: ingest.yml  maintenance.yml
obsidian_note_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
runner-setup/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  test_note.md
runner-setup/src/: __init__.py  context_loader.py  filer.py  fixer.py  git_ops.py  indexer.py  llm_client.py  main.py  processor.py  response_parser.py  run_manual.py  scanner.py  state_manager.py  test_gemini.py  token_fetcher.py  (+3 more)
scripts/: entrypoint.sh  requirements.txt  run_s10_tests.sh  run_s11_tests.sh  run_s12_tests.sh  run_s13_tests.sh  run_s14_tests.sh  run_s15_tests.sh  token_fetcher.py
src_v2/: __init__.py
tests/: __init__.py  conftest.py  test_adapters.py  test_dummy_vault.py  test_fake_llm.py  test_imports.py  test_models.py
(+102 files in other folders)
