[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-note-manager"
version = "0.1.0"
description = "Obsidian Vault automation with Clean Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pytest>=7.0",
    "google-generativeai>=0.3.0",
    "python-frontmatter>=1.0.0",
    "chainlit>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.3.0",
    "python-frontmatter>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src_v2*"]

[project.scripts]
obsidian = "src_v2.entrypoints.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--cov=apps --cov=packages --cov-report=term-missing"

[tool.coverage.run]
source = ["apps", "packages"]
omit = ["*/tests/*", "*/__pycache__/*", "apps/copilot_ui/app.py", "apps/vault_worker/activities/git_ops.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__"]
fail_under = 90
