[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-github-runner"
version = "0.1.0"
description = "Dumb Temporal trigger for GitHub Actions runner"
requires-python = ">=3.12"
dependencies = [
    "obsidian-shared",
    "temporalio",
]

[tool.hatch.build.targets.wheel]
packages = ["apps/github-runner"]
