[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-vault-worker"
version = "0.1.0"
description = "Temporal worker for Obsidian vault automation"
requires-python = ">=3.12"
dependencies = [
    "obsidian-shared",
    "temporalio",
    "gitpython",
    "python-frontmatter",
    "google-generativeai>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps/vault-worker"]
